corrected alignment scope activities

--- a/app/assets/stylesheets/application/screen.scss
+++ b/app/assets/stylesheets/application/screen.scss
@@ -26,7 +26,7 @@ body {
 
 .scope {
 	font-size: 2.1em;
-	margin-top: -6px;
+	margin-top: -7px;
 }
 
 .hero-unit {
